# fastapi-postgresql

./: README.md  pyproject.toml
app/: app.py
app/database/: connection.py
